--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,9 +10,49 @@
     <app-products-header
       (columnsCountChange)="onColumnsCountChange($event)"
     ></app-products-header>
-    {{ cols }}
+    {{ category }}
     <mat-grid-list gutterSize="16" [cols]="cols" [rowHeight]="rowHeight">
-      <app-product-box [fullWidthMode]="cols === 1"></app-product-box>
+      <mat-grid-tile>
+        <app-product-box
+          class="w-full"
+          [fullWidthMode]="cols === 1"
+        ></app-product-box>
+      </mat-grid-tile>
+
+      <mat-grid-tile>
+        <app-product-box
+          class="w-full"
+          [fullWidthMode]="cols === 1"
+        ></app-product-box>
+      </mat-grid-tile>
+
+      <mat-grid-tile>
+        <app-product-box
+          class="w-full"
+          [fullWidthMode]="cols === 1"
+        ></app-product-box>
+      </mat-grid-tile>
+
+      <mat-grid-tile>
+        <app-product-box
+          class="w-full"
+          [fullWidthMode]="cols === 1"
+        ></app-product-box>
+      </mat-grid-tile>
+
+      <mat-grid-tile>
+        <app-product-box
+          class="w-full"
+          [fullWidthMode]="cols === 1"
+        ></app-product-box>
+      </mat-grid-tile>
+
+      <mat-grid-tile>
+        <app-product-box
+          class="w-full"
+          [fullWidthMode]="cols === 1"
+        ></app-product-box>
+      </mat-grid-tile>
     </mat-grid-list>
   </mat-drawer-content>
 </mat-drawer-container>
