--- a/src/app/pages/home/components/product-box/product-box.component.html
+++ b/src/app/pages/home/components/product-box/product-box.component.html
@@ -21,7 +21,7 @@
       </div>
       <div class="flex p-2 justify-between">
         <span class="text-red-400">{{ "150" | currency }}</span>
-        <button>
+        <button (click)="onAddToCart()">
           <mat-icon class="text-gary-500">shopping_cart</mat-icon>
         </button>
       </div>
